internal/xds/translator/testdata/out/xds-ir-sublinear/authorization-client-cidr.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - www.example.com
    matcher:
      matcherTree:
        exactMatchMap:
          map:
            /bar:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    pathSeparatedPrefix: /bar
                  name: httproute/default/httproute-2/rule/0/match/0/www_example_com
                  route:
                    cluster: httproute/default/httproute-2/rule/0
                    upgradeConfigs:
                    - upgradeType: websocket
                  typedPerFilterConfig:
                    envoy.filters.http.rbac:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBACPerRoute
                      rbac:
                        matcher:
                          matcherList:
                            matchers:
                            - onMatch:
                                action:
                                  name: securitypolicy/envoy-gateway/policy-for-gateway/authorization/rule/0
                                  typedConfig:
                                    '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                                    name: ALLOW
                              predicate:
                                singlePredicate:
                                  customMatch:
                                    name: ip_matcher
                                    typedConfig:
                                      '@type': type.googleapis.com/envoy.extensions.matching.input_matchers.ip.v3.Ip
                                      cidrRanges:
                                      - addressPrefix: 10.0.1.0
                                        prefixLen: 24
                                      - addressPrefix: 10.0.2.0
                                        prefixLen: 24
                                      statPrefix: client_ip
                                  input:
                                    name: client_ip
                                    typedConfig:
                                      '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.SourceIPInput
                          onNoMatch:
                            action:
                              name: default
                              typedConfig:
                                '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                                action: DENY
                                name: DENY
            /foo:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    pathSeparatedPrefix: /foo
                  name: httproute/default/httproute-1/rule/0/match/0/www_example_com
                  route:
                    cluster: httproute/default/httproute-1/rule/0
                    upgradeConfigs:
                    - upgradeType: websocket
                  typedPerFilterConfig:
                    envoy.filters.http.rbac:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBACPerRoute
                      rbac:
                        matcher:
                          matcherList:
                            matchers:
                            - onMatch:
                                action:
                                  name: deny-location-1
                                  typedConfig:
                                    '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                                    action: DENY
                                    name: DENY
                              predicate:
                                singlePredicate:
                                  customMatch:
                                    name: ip_matcher
                                    typedConfig:
                                      '@type': type.googleapis.com/envoy.extensions.matching.input_matchers.ip.v3.Ip
                                      cidrRanges:
                                      - addressPrefix: 192.168.1.0
                                        prefixLen: 24
                                      - addressPrefix: 192.168.2.0
                                        prefixLen: 24
                                      statPrefix: client_ip
                                  input:
                                    name: client_ip
                                    typedConfig:
                                      '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.SourceIPInput
                            - onMatch:
                                action:
                                  name: deny-location-2
                                  typedConfig:
                                    '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                                    action: DENY
                                    name: DENY
                              predicate:
                                singlePredicate:
                                  customMatch:
                                    name: ip_matcher
                                    typedConfig:
                                      '@type': type.googleapis.com/envoy.extensions.matching.input_matchers.ip.v3.Ip
                                      cidrRanges:
                                      - addressPrefix: 10.75.1.0
                                        prefixLen: 24
                                      - addressPrefix: 10.75.2.0
                                        prefixLen: 24
                                      statPrefix: client_ip
                                  input:
                                    name: client_ip
                                    typedConfig:
                                      '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.SourceIPInput
                          onNoMatch:
                            action:
                              name: default
                              typedConfig:
                                '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                                name: ALLOW
            /test:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    pathSeparatedPrefix: /test
                  name: httproute/default/httproute-3/rule/0/match/0/www_example_com
                  route:
                    cluster: httproute/default/httproute-3/rule/0
                    upgradeConfigs:
                    - upgradeType: websocket
                  typedPerFilterConfig:
                    envoy.filters.http.rbac:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBACPerRoute
                      rbac:
                        matcher:
                          onNoMatch:
                            action:
                              name: default
                              typedConfig:
                                '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                                action: DENY
                                name: DENY
        input:
          name: request-headers
          typedConfig:
            '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
            headerName: :path
      onNoMatch:
        matcher:
          matcherTree:
            input:
              name: request-headers
              typedConfig:
                '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                headerName: :path
            prefixMatchMap:
              map:
                /bar/:
                  action:
                    name: route
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.Route
                      match:
                        pathSeparatedPrefix: /bar
                      name: httproute/default/httproute-2/rule/0/match/0/www_example_com
                      route:
                        cluster: httproute/default/httproute-2/rule/0
                        upgradeConfigs:
                        - upgradeType: websocket
                      typedPerFilterConfig:
                        envoy.filters.http.rbac:
                          '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBACPerRoute
                          rbac:
                            matcher:
                              matcherList:
                                matchers:
                                - onMatch:
                                    action:
                                      name: securitypolicy/envoy-gateway/policy-for-gateway/authorization/rule/0
                                      typedConfig:
                                        '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                                        name: ALLOW
                                  predicate:
                                    singlePredicate:
                                      customMatch:
                                        name: ip_matcher
                                        typedConfig:
                                          '@type': type.googleapis.com/envoy.extensions.matching.input_matchers.ip.v3.Ip
                                          cidrRanges:
                                          - addressPrefix: 10.0.1.0
                                            prefixLen: 24
                                          - addressPrefix: 10.0.2.0
                                            prefixLen: 24
                                          statPrefix: client_ip
                                      input:
                                        name: client_ip
                                        typedConfig:
                                          '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.SourceIPInput
                              onNoMatch:
                                action:
                                  name: default
                                  typedConfig:
                                    '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                                    action: DENY
                                    name: DENY
                /foo/:
                  action:
                    name: route
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.Route
                      match:
                        pathSeparatedPrefix: /foo
                      name: httproute/default/httproute-1/rule/0/match/0/www_example_com
                      route:
                        cluster: httproute/default/httproute-1/rule/0
                        upgradeConfigs:
                        - upgradeType: websocket
                      typedPerFilterConfig:
                        envoy.filters.http.rbac:
                          '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBACPerRoute
                          rbac:
                            matcher:
                              matcherList:
                                matchers:
                                - onMatch:
                                    action:
                                      name: deny-location-1
                                      typedConfig:
                                        '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                                        action: DENY
                                        name: DENY
                                  predicate:
                                    singlePredicate:
                                      customMatch:
                                        name: ip_matcher
                                        typedConfig:
                                          '@type': type.googleapis.com/envoy.extensions.matching.input_matchers.ip.v3.Ip
                                          cidrRanges:
                                          - addressPrefix: 192.168.1.0
                                            prefixLen: 24
                                          - addressPrefix: 192.168.2.0
                                            prefixLen: 24
                                          statPrefix: client_ip
                                      input:
                                        name: client_ip
                                        typedConfig:
                                          '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.SourceIPInput
                                - onMatch:
                                    action:
                                      name: deny-location-2
                                      typedConfig:
                                        '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                                        action: DENY
                                        name: DENY
                                  predicate:
                                    singlePredicate:
                                      customMatch:
                                        name: ip_matcher
                                        typedConfig:
                                          '@type': type.googleapis.com/envoy.extensions.matching.input_matchers.ip.v3.Ip
                                          cidrRanges:
                                          - addressPrefix: 10.75.1.0
                                            prefixLen: 24
                                          - addressPrefix: 10.75.2.0
                                            prefixLen: 24
                                          statPrefix: client_ip
                                      input:
                                        name: client_ip
                                        typedConfig:
                                          '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.SourceIPInput
                              onNoMatch:
                                action:
                                  name: default
                                  typedConfig:
                                    '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                                    name: ALLOW
                /test/:
                  action:
                    name: route
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.Route
                      match:
                        pathSeparatedPrefix: /test
                      name: httproute/default/httproute-3/rule/0/match/0/www_example_com
                      route:
                        cluster: httproute/default/httproute-3/rule/0
                        upgradeConfigs:
                        - upgradeType: websocket
                      typedPerFilterConfig:
                        envoy.filters.http.rbac:
                          '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBACPerRoute
                          rbac:
                            matcher:
                              onNoMatch:
                                action:
                                  name: default
                                  typedConfig:
                                    '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                                    action: DENY
                                    name: DENY
    name: envoy-gateway/gateway-1/http/www_example_com
